[gd_scene load_steps=5 format=3 uid="uid://bbymdllg7tpvi"]

[ext_resource type="Script" uid="uid://bhsdjhclq1o8d" path="res://Features/DeveloperDialog/developer_dialog.gd" id="1_pd2m7"]
[ext_resource type="Script" uid="uid://ckhevounoe7f4" path="res://Scenes/fadeable_panel_container.gd" id="2_p4prn"]
[ext_resource type="Texture2D" uid="uid://c1kyb7ia7ta4x" path="res://Textures/UI/Buttons/button_sub_menu_entry.png" id="3_ijjms"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pdsj5"]

[node name="DeveloperDialog" type="Control"]
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pd2m7")

[node name="FadeablePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_pdsj5")
script = ExtResource("2_p4prn")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="MarginContainer" type="MarginContainer" parent="FadeablePanelContainer"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 192

[node name="VBoxContainer" type="VBoxContainer" parent="FadeablePanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="EnableKidsModeTextureButton" type="TextureButton" parent="FadeablePanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ijjms")

[node name="Label" type="Label" parent="FadeablePanelContainer/MarginContainer/VBoxContainer/EnableKidsModeTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MediumLabel"
text = "KidsMode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="1920x1080TextureButton" type="TextureButton" parent="FadeablePanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ijjms")

[node name="Label" type="Label" parent="FadeablePanelContainer/MarginContainer/VBoxContainer/1920x1080TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MediumLabel"
text = "1920x1080"
horizontal_alignment = 1
vertical_alignment = 1

[node name="960x540TextureButton" type="TextureButton" parent="FadeablePanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_ijjms")

[node name="Label" type="Label" parent="FadeablePanelContainer/MarginContainer/VBoxContainer/960x540TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"MediumLabel"
text = "960x540"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="on_faded_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_in"]
[connection signal="on_faded_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_out"]
[connection signal="on_fading_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_in"]
[connection signal="on_fading_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_out"]
[connection signal="pressed" from="FadeablePanelContainer/MarginContainer/VBoxContainer/EnableKidsModeTextureButton" to="." method="_on_enable_kids_mode_texture_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/MarginContainer/VBoxContainer/1920x1080TextureButton" to="." method="_on_x_1080_texture_button_pressed"]
[connection signal="pressed" from="FadeablePanelContainer/MarginContainer/VBoxContainer/960x540TextureButton" to="." method="_on_x_540_texture_button_pressed"]
